# amman-clockwork-example

./: .gitignore  README.md  package-lock.json  package.json
.github/: .env  file-filters.yml
.github/workflows/: build-programs.yml  deploy-program.yml
clients/js/: .solitarc.js  package-lock.json  package.json
clients/js/idl/: example.json
clients/js/test/: expire.test.ts  stake.test.ts  unstake.test.ts
clients/js/test/setup/: amman.ts  index.ts  txs-init.ts
clients/js/test/utils/: asserts.ts  constants.ts  errors.ts  index.ts  pdas.ts
clockwork/: clockwork-network.ts  gen-api.js  geyser-plugin.config.json  setup.sh
clockwork/idl/: network_program.json
configs/: shank.js  validator.js
configs/program-scripts/: dump.sh
programs/example/: Anchor.toml  Cargo.toml
programs/example/program/: Cargo.toml
programs/example/program/src/: error.rs  lib.rs  state.rs
programs/example/program/src/instructions/: mod.rs  utils.rs
programs/example/program/src/instructions/expire/: context.rs  expire.rs  mod.rs
programs/example/program/src/instructions/stake/: context.rs  mod.rs  stake.rs
programs/example/program/src/instructions/unstake/: context.rs  mod.rs  unstake.rs
