[package]
name = "example"
version = "0.1.0"
description = "Example"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "example"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.15.2"
winnow="=0.4.1"
toml_datetime="=0.6.1"
mpl-token-auth-rules = "1.3.0"
mpl-token-metadata = { version = "1.11.2", features = ["no-entrypoint"] }
clockwork-sdk = "2.0.18"
